src/components/common/Footer/Footer.module.css
.footer {
  @apply bg-[#152032]
}

.container {
  @apply py-12 px-6 md:pt-16 md:px-28 md:pb-10
}

.column {
  @apply w-3/12
}

.heading {
  @apply text-white uppercase w-full flex items-center min-h-[48px]
}

.heading a {
  @apply text-[#717786] uppercase mb-6
}

a {
  @apply text-white font-normal text-xs my-2 uppercase md:normal-case
}

.form {
  @apply hidden text-white border-b font-bold leading-8 md:block
}

.subtitle {
  @apply text-[#A1A8B3] my-6 text-xs leading-5 max-w-xs font-normal
}

.input {
  @apply flex pb-2 pt-5
}

[data-store-input] {
  @apply bg-[#152032] text-white text-xs w-3/4
}

.input button {
  @apply pl-3 text-[#f71963] uppercase text-xs font-medium
}

.containerBottom {
  @apply text-[#A1A8B3] text-xs font-normal mt-12 items-center md:flex
}

.social {
  @apply flex justify-center md:w-1/3
}

.mobileHidden {
  @apply hidden md:contents
}

.desktopHidden {
  @apply contents md:hidden
}

